--- a/ipuatsons/Dockerfile
+++ b/ipuatsons/Dockerfile
@@ -9,6 +9,6 @@ RUN yarn global add @vue/cli
 RUN yarn install
 ENV HOST=0.0.0.0
 
-CMD ["yarn", "run", "serve"]
+ENTRYPOINT ["yarn", "run", "serve"]
 
 
