--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,6 +5,8 @@ services:
     build: ./backend
     ports:
       - "8000:8000"
+    volumes:
+     - ipautsons-volume:/IPAuTSoNS
     image: chinglew27/ipautsons:backend
 
 
@@ -14,5 +16,9 @@ services:
     ports:
      - "80:80"
     volumes:
-     - .:/code
+     - ipautsons-volume:/IPAuTSoNS
     image: chinglew27/ipautsons:frontend
+
+volumes:
+  ipautsons-volume:
+     driver: local
