--- a/ipuatsons/package.json
+++ b/ipuatsons/package.json
@@ -18,7 +18,8 @@
     "vue-router": "^4.0.3",
     "vue-slide-bar": "^1.2.0",
     "vue3-cookies": "^1.0.6",
-    "vuex": "^4.0.0"
+    "vuex": "^4.0.0",
+    "vuex-persistedstate": "^4.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
