--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
     "vue-router": "^4.0.3",
     "vue-slide-bar": "^1.2.0",
     "vue3-cookies": "^1.0.6",
+    "vuejs-uploader": "^0.6.5",
     "vuex": "^4.0.0",
     "vuex-persistedstate": "^4.1.0"
   },
