--- a/py/pixel/Dockerfile
+++ b/py/pixel/Dockerfile
@@ -1,18 +1,17 @@
-FROM python:3.6
+# Build stage
+FROM python:3.6 AS build
 
+COPY requirements.txt .
 
 RUN pip install --no-cache-dir --upgrade pip && \
-    pip install --no-cache-dir glob2 && \
-    pip install --no-cache-dir psutil && \
-    pip install --no-cache-dir tensorflow && \
-    pip install --no-cache-dir keras && \
-    pip install --no-cache-dir Pillow && \
-    pip install --no-cache-dir torch && \
-    pip install --no-cache-dir torchvision && \
-    pip install --no-cache-dir torchaudio && \
-    pip install --no-cache-dir matplotlib && \
-    pip install --no-cache-dir pymongo[srv] && \
-    pip install --no-cache-dir numpy
+    pip install --no-cache-dir -r requirements.txt
 
+# Final stage
+FROM python:3.6-slim
+
+WORKDIR /app
+
+COPY --from=build requirements.txt .
 COPY . .
-ENTRYPOINT ["python", "pixel.py"]
+
+CMD ["python", "pixel.py"]
