--- a/py/dd/Dockerfile
+++ b/py/dd/Dockerfile
@@ -1,6 +1,22 @@
-FROM python:3.6
+FROM tiangolo/uvicorn-gunicorn:python3.9-slim
 
-RUN pip install --no-cache-dir --upgrade pip
+LABEL maintainer="team-erc"
 
-COPY com.py .
-ENTRYPOINT ["python", "com.py"]
+ENV WORKERS_PER_CORE=4 
+ENV MAX_WORKERS=24
+ENV LOG_LEVEL="warning"
+ENV TIMEOUT="200"
+
+RUN mkdir /binAPI
+
+COPY requirements.txt /binAPI
+
+COPY . /binAPI
+
+WORKDIR /binAPI
+
+RUN pip install -r requirements.txt
+
+EXPOSE 8000
+
+CMD ["uvicorn", "main:app", "--host", "127.0.0.1", "--port", "8000"]
