--- a/py/pixel/Dockerfile
+++ b/py/pixel/Dockerfile
@@ -4,15 +4,14 @@ FROM python:3.6 AS build
 COPY requirements.txt .
 
 RUN pip install --no-cache-dir --upgrade pip && \
-    pip install --no-cache-dir -r requirements.txt \
-    pip install --no-cache-dir numpy
+    pip install --no-cache-dir -r requirements.txt
 
 # Final stage
 FROM python:3.6-slim
 
 WORKDIR /app
 
-COPY --from=build requirements.txt .
+COPY --from=build /usr/local/lib/python3.6/site-packages /usr/local/lib/python3.6/site-packages
 COPY . .
 
 CMD ["python", "pixel.py"]
