--- a/py/pixel/requirements.txt
+++ b/py/pixel/requirements.txt
@@ -1,11 +1,10 @@
 glob2
-psutil 
-tensorflow
-keras
-Pillow
-torch
-torchvision
-torchaudio
-matplotlib
 pymongo[srv]
-
+keras
+tensorflow
+matplotlib
+numpy
+pillow==8.3.2
+psutil==5.9.1
+torch==1.9.1
+torchvision==0.10.1
