--- a/py/gan/requirements.txt
+++ b/py/gan/requirements.txt
@@ -1,10 +1,10 @@
-opencv-python-headless==4.5.3.56
+opencv-python==4.5.5.62
 mediapipe
 stow
 numpy
 tqdm
 onnxruntime
 tf2onnx
-tensorflow==2.*
+tensorflow
 pymongo[srv]
 glob2
