--- a/script/mosaig/requirements.txt
+++ b/script/mosaig/requirements.txt
@@ -1,7 +1,11 @@
 numpy
 psutil==5.8.0
-opencv-python==4.5.5.62
 tensorflow
 Pillow==8.4.0
 scipy
 keras
+torch==1.9.1
+    # via
+    #   -r requirements.in
+    #   torchvision
+torchvision==0.10.1
